feat: 인증 및 프로필 기능 구현
요구사항:
- Google/Github OAuth 로그인
- 이메일 회원가입 및 로그인
- 2FA/MFA 지원
- 로그아웃 및 비밀번호 변경
- 유학 서비스용 프로필 페이지

구현 내용:
- AuthContext로 전역 인증 상태 관리
- Supabase Auth 통합 (OAuth, 이메일)
- ProtectedRoute로 인증 필요 페이지 보호
- Login/Signup/Profile 페이지 생성
- profiles 테이블 및 RLS 정책 설정
- 13개 언어 번역 추가
- 테스트 코드 작성

보안:
- 비밀번호 해시 (Supabase)
- RLS 데이터 접근 제어
- HttpOnly 쿠키 세션
- HTTPS only (production)

참고: History/2026-01-16-auth-profile-implementation.md

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -124,5 +124,77 @@
     "addressValue": "Seoul, South Korea",
     "copyright": "© 2024 Go Almond. All rights reserved.",
     "organization": "Go Almond Education Services"
+  },
+  "auth": {
+    "login": {
+      "title": "Welcome Back",
+      "description": "Sign in to your account to continue",
+      "button": "Sign In"
+    },
+    "signup": {
+      "title": "Create Account",
+      "description": "Start your journey to studying in the USA",
+      "button": "Sign Up"
+    },
+    "email": "Email",
+    "emailPlaceholder": "your@email.com",
+    "password": "Password",
+    "passwordPlaceholder": "Enter your password",
+    "confirmPassword": "Confirm Password",
+    "confirmPasswordPlaceholder": "Confirm your password",
+    "forgotPassword": "Forgot password?",
+    "noAccount": "Don't have an account?",
+    "haveAccount": "Already have an account?",
+    "signupLink": "Sign up",
+    "loginLink": "Sign in",
+    "continueWithGoogle": "Continue with Google",
+    "continueWithGithub": "Continue with Github",
+    "orContinueWith": "Or continue with email",
+    "loggingIn": "Signing in...",
+    "creatingAccount": "Creating account...",
+    "logout": "Logout",
+    "loginSuccess": "Successfully signed in!",
+    "signupSuccess": "Account created! Please check your email to verify.",
+    "errors": {
+      "loginFailed": "Invalid email or password",
+      "signupFailed": "Failed to create account. Please try again.",
+      "oauthFailed": "Failed to sign in. Please try again."
+    }
+  },
+  "profile": {
+    "title": "My Profile",
+    "description": "Manage your study abroad profile and preferences",
+    "basicInfo": "Basic Information",
+    "academicInfo": "Academic Information",
+    "studyPreferences": "Study Preferences",
+    "additionalInfo": "Additional Information",
+    "fullName": "Full Name",
+    "fullNamePlaceholder": "John Doe",
+    "phone": "Phone Number",
+    "phonePlaceholder": "+1 234 567 8900",
+    "dateOfBirth": "Date of Birth",
+    "nationality": "Nationality",
+    "nationalityPlaceholder": "USA",
+    "currentEducationLevel": "Current Education Level",
+    "currentEducationLevelPlaceholder": "High School Senior",
+    "targetDegree": "Target Degree",
+    "targetDegreePlaceholder": "Bachelor's",
+    "fieldOfInterest": "Field of Interest",
+    "fieldOfInterestPlaceholder": "Computer Science",
+    "gpa": "GPA",
+    "englishProficiency": "English Proficiency",
+    "englishProficiencyPlaceholder": "TOEFL 100, IELTS 7.5",
+    "preferredLocation": "Preferred Location",
+    "preferredLocationPlaceholder": "California, New York",
+    "budgetRange": "Budget Range",
+    "budgetRangePlaceholder": "$30,000 - $50,000/year",
+    "studyTimeline": "Study Timeline",
+    "studyTimelinePlaceholder": "Fall 2024",
+    "additionalInfoLabel": "Additional Information",
+    "additionalInfoPlaceholder": "Any other information you'd like to share...",
+    "saveButton": "Save Profile",
+    "saving": "Saving...",
+    "updateSuccess": "Profile updated successfully!",
+    "updateError": "Failed to update profile. Please try again."
   }
 }
