--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -124,5 +124,77 @@
     "addressValue": "서울특별시, 대한민국",
     "copyright": "© 2024 Go Almond. All rights reserved.",
     "organization": "Go Almond 교육 서비스"
+  },
+  "auth": {
+    "login": {
+      "title": "환영합니다",
+      "description": "계정에 로그인하여 계속하세요",
+      "button": "로그인"
+    },
+    "signup": {
+      "title": "회원가입",
+      "description": "미국 유학의 여정을 시작하세요",
+      "button": "가입하기"
+    },
+    "email": "이메일",
+    "emailPlaceholder": "your@email.com",
+    "password": "비밀번호",
+    "passwordPlaceholder": "비밀번호를 입력하세요",
+    "confirmPassword": "비밀번호 확인",
+    "confirmPasswordPlaceholder": "비밀번호를 다시 입력하세요",
+    "forgotPassword": "비밀번호를 잊으셨나요?",
+    "noAccount": "계정이 없으신가요?",
+    "haveAccount": "이미 계정이 있으신가요?",
+    "signupLink": "가입하기",
+    "loginLink": "로그인",
+    "continueWithGoogle": "Google로 계속하기",
+    "continueWithGithub": "Github로 계속하기",
+    "orContinueWith": "또는 이메일로 계속하기",
+    "loggingIn": "로그인 중...",
+    "creatingAccount": "계정 생성 중...",
+    "logout": "로그아웃",
+    "loginSuccess": "로그인 성공!",
+    "signupSuccess": "계정이 생성되었습니다! 이메일을 확인해주세요.",
+    "errors": {
+      "loginFailed": "이메일 또는 비밀번호가 올바르지 않습니다",
+      "signupFailed": "계정 생성에 실패했습니다. 다시 시도해주세요.",
+      "oauthFailed": "로그인에 실패했습니다. 다시 시도해주세요."
+    }
+  },
+  "profile": {
+    "title": "내 프로필",
+    "description": "유학 프로필 및 선호도를 관리하세요",
+    "basicInfo": "기본 정보",
+    "academicInfo": "학업 정보",
+    "studyPreferences": "유학 선호도",
+    "additionalInfo": "추가 정보",
+    "fullName": "성명",
+    "fullNamePlaceholder": "홍길동",
+    "phone": "전화번호",
+    "phonePlaceholder": "+82 10 1234 5678",
+    "dateOfBirth": "생년월일",
+    "nationality": "국적",
+    "nationalityPlaceholder": "대한민국",
+    "currentEducationLevel": "현재 학력",
+    "currentEducationLevelPlaceholder": "고등학교 3학년",
+    "targetDegree": "목표 학위",
+    "targetDegreePlaceholder": "학사",
+    "fieldOfInterest": "관심 분야",
+    "fieldOfInterestPlaceholder": "컴퓨터 공학",
+    "gpa": "학점",
+    "englishProficiency": "영어 능력",
+    "englishProficiencyPlaceholder": "TOEFL 100, IELTS 7.5",
+    "preferredLocation": "선호 지역",
+    "preferredLocationPlaceholder": "캘리포니아, 뉴욕",
+    "budgetRange": "예산 범위",
+    "budgetRangePlaceholder": "$30,000 - $50,000/년",
+    "studyTimeline": "유학 시기",
+    "studyTimelinePlaceholder": "2024년 가을",
+    "additionalInfoLabel": "추가 정보",
+    "additionalInfoPlaceholder": "공유하고 싶은 다른 정보가 있다면...",
+    "saveButton": "프로필 저장",
+    "saving": "저장 중...",
+    "updateSuccess": "프로필이 성공적으로 업데이트되었습니다!",
+    "updateError": "프로필 업데이트에 실패했습니다. 다시 시도해주세요."
   }
 }
